[gd_scene load_steps=4 format=3 uid="uid://dbjwdx3k7u03g"]

[ext_resource type="Script" uid="uid://cp2g2yrcshhor" path="res://menu/main_menu/main_menu.gd" id="1_q6idt"]
[ext_resource type="Texture2D" uid="uid://cxkycepyttx2k" path="res://assets/promo/name.png" id="2_e5xhn"]
[ext_resource type="PackedScene" uid="uid://d1lh1ufo7m85m" path="res://game/entities/characters/knight/knight.tscn" id="2_qs6vt"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q6idt")

[node name="Knight" parent="." instance=ExtResource("2_qs6vt")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.164706, 0.184314, 0.305882, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2
texture = ExtResource("2_e5xhn")
stretch_mode = 5

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer2"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
custom_minimum_size = Vector2(256, 32)
layout_mode = 2
size_flags_horizontal = 4
text = "Loot"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
layout_mode = 2
text = "Or"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
custom_minimum_size = Vector2(256, 32)
layout_mode = 2
size_flags_horizontal = 4
text = "Leave
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer2/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer2/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
